--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,15 +1,15 @@
 @use "./abstracts" as a;
 @use "./core" as c;
-// @use "./layout/index.scss" as l;
+@use "./layout/index.scss" as l;
 
 body {
   font-family: a.$poppins;
   color: a.$text-gray;
-  background: rgb(17, 34, 59);
+  background: rgb(48, 63, 83);
   background: radial-gradient(
     circle,
-    rgba(17, 34, 59, 1) 0%,
-    rgba(2, 0, 36, 1) 100%
+    rgba(48, 63, 83, 1) 33%,
+    rgba(32, 39, 48, 1) 100%
   );
 }
 
