starting intro portfolio

--- a/src/sass/abstracts/_fonts.scss
+++ b/src/sass/abstracts/_fonts.scss
@@ -5,4 +5,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
 
 $code: "Share Tech Mono", monos;
-$poppins: "Poppins", "sans-serif34";
+$poppins: "Poppins", "sans-serif";
