--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 body {
   font-family: a.$poppins;
   color: a.$text-gray;
+  padding: 3em;
   background: rgb(48, 63, 83);
   background: radial-gradient(
     circle,
