--- a/src/components/atoms/PrimaryButton/PrimaryButton.scss
+++ b/src/components/atoms/PrimaryButton/PrimaryButton.scss
@@ -1,5 +1,8 @@
 @use "../../../sass/abstracts/variables" as v;
 .primaryButton{
+    display:block;
+    text-align: center;
+    text-decoration: none;
     text-transform:uppercase;
     min-width: 150px;
     width:100%;
