--- a/src/components/organism/IntroSection/IntroSection.scss
+++ b/src/components/organism/IntroSection/IntroSection.scss
@@ -7,7 +7,6 @@
 .introSection {
   justify-content: space-between;
   align-items: center;
-  margin: 5em 0;
   .introFullName{
     font-size: 2.5rem;
     color:white;
@@ -23,6 +22,16 @@
 }
 .introImageContainer{
   img{
-    width:350px;
+    min-width:350px;
+    max-width: 350px;
   }
 }
+
+
+ @media screen and (max-width:768px){
+   .introImageContainer{
+     img{
+       display: none;
+     }
+   }
+ }
