--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,30 @@ body {
   );
 }
 
+.primaryButton{
+  display:block;
+  text-align: center;
+  text-decoration: none;
+  text-transform:uppercase;
+  min-width: 150px;
+  width:100%;
+  padding:1em;
+  border-radius: 0.25em;
+  border:2px solid a.$lightestBlue;
+  background-color: inherit;
+  color:a.$lightestBlue;
+  cursor:pointer;
+  transition: 0.5s;
+  &:hover{
+      background-color: a.$text-blue;
+      color:white;
+  }
+}
+
+section{
+  margin:5em 0 ;
+}
+
 h1,
 h2,
 h3,
