project card component, headTitle position prop

--- a/src/components/organism/Skills/Skills.scss
+++ b/src/components/organism/Skills/Skills.scss
@@ -1,6 +1,9 @@
+@use "../../../sass/abstracts/variables" as v;
+
 .skillSection{
     text-align: center;
     position: relative;
+    
 }
 .skillHeader{
     justify-content: center;
