bg animated bubbles

--- a/src/components/organism/Skills/Skills.scss
+++ b/src/components/organism/Skills/Skills.scss
@@ -3,7 +3,7 @@
 .skillSection{
     text-align: center;
     position: relative;
-    
+   
 }
 .skillHeader{
     justify-content: center;
@@ -12,7 +12,7 @@
     position: absolute;
     right: 0;
     top:0;
-    background-color: inherit;
+    background-color: initial;
     color:white;
     border:none;
     cursor: pointer;
